# dukeitout

./: .gitignore  dukeitout.cabal  stack.yaml
app/: API.hs  Command.hs  Control.hs  Main.hs  Model.hs  Serialize.hs  State.hs
front/: .gitignore  Makefile  arch.dia  elm-package.json  ui.dia
front/src/: Api.elm  Main.elm  State.elm  Types.elm  View.elm
