name:                dukeitout
version:             0.1.0.0
author:              Paavo Parkkinen
maintainer:          pparkkin@gmail.com
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable dukeitout
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       API
                     , Command
                     , Control
                     , Model
                     , Serialize
                     , State
  build-depends:       base
                     , text
                     , bytestring
                     , aeson
                     , scotty
                     , transformers

